[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/mainmenu/tex_ui_sportbutton_hover.png" type="Texture" id=1]
[ext_resource path="res://scenes/mainmenu/mainmenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/mainmenu/tex_ui_sportbutton_normal.png" type="Texture" id=3]
[ext_resource path="res://scenes/mainmenu/tex_main_logo.png" type="Texture" id=4]
[ext_resource path="res://scenes/mainmenu/tex_preview_airscene.png" type="Texture" id=5]
[ext_resource path="res://scenes/mainmenu/rotate.gd" type="Script" id=6]
[ext_resource path="res://scenes/common/mdl_island_lowpoly.glb" type="PackedScene" id=10]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.380392, 0.858824, 0.992157, 1, 0.00392157, 0.129412, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 1

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background2d" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background3d" type="Spatial" parent="."]

[node name="env" type="Spatial" parent="background3d"]

[node name="DirectionalLight" type="DirectionalLight" parent="background3d/env"]
transform = Transform( 1, 0, 0, 0, 0.32215, 0.946689, 0, -0.946689, 0.32215, 0, 0, 0 )

[node name="stage" type="Spatial" parent="background3d"]

[node name="mdl_island_lowpoly" parent="background3d/stage" instance=ExtResource( 10 )]

[node name="cameraman" type="Spatial" parent="background3d"]
script = ExtResource( 6 )

[node name="Camera" type="Camera" parent="background3d/cameraman"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 200, 1026.29 )
near = 1.0
far = 10000.0

[node name="menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Control" parent="menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/start"]
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 0.865
texture = SubResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="menu/start/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 247.0
margin_top = 37.0
margin_right = -702.0
margin_bottom = -36.0001
bbcode_enabled = true
bbcode_text = "[color=#000000]START"
text = "START"

[node name="TextureRect" type="TextureRect" parent="menu/start/TextureRect"]
anchor_left = 0.546
anchor_right = 0.893
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -52.0
texture = ExtResource( 4 )

[node name="main" type="Control" parent="menu"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 332, 108 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="channel_grid" type="GridContainer" parent="menu/main"]
anchor_left = 0.15
anchor_top = 0.083
anchor_right = 0.85
anchor_bottom = 0.708
margin_left = -0.256004
margin_top = 0.199997
margin_right = 0.255981
margin_bottom = 0.200012
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="air_sports" type="TextureButton" parent="menu/main/channel_grid"]
margin_right = 176.0
margin_bottom = 122.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="RichTextLabel" parent="menu/main/channel_grid/air_sports"]
anchor_left = 0.15
anchor_top = 0.13
anchor_right = 0.85
anchor_bottom = 0.26
bbcode_enabled = true
bbcode_text = "[center][color=#000000]AIR SPORTS"
text = "AIR SPORTS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/main/channel_grid/air_sports"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="racquet" type="TextureButton" parent="menu/main/channel_grid"]
margin_left = 180.0
margin_right = 356.0
margin_bottom = 122.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="RichTextLabel" parent="menu/main/channel_grid/racquet"]
anchor_left = 0.15
anchor_top = 0.13
anchor_right = 0.85
anchor_bottom = 0.26
bbcode_enabled = true
bbcode_text = "[center][color=#000000]RACQUET SPORTS"
text = "RACQUET SPORTS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/main/channel_grid/racquet"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuitem3" type="TextureButton" parent="menu/main/channel_grid"]
margin_left = 360.0
margin_right = 536.0
margin_bottom = 122.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="RichTextLabel" parent="menu/main/channel_grid/menuitem3"]
anchor_left = 0.15
anchor_top = 0.13
anchor_right = 0.85
anchor_bottom = 0.26
bbcode_enabled = true
bbcode_text = "[center][color=#000000]..."
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/main/channel_grid/menuitem3"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuitem4" type="TextureButton" parent="menu/main/channel_grid"]
margin_left = 540.0
margin_right = 716.0
margin_bottom = 122.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="RichTextLabel" parent="menu/main/channel_grid/menuitem4"]
anchor_left = 0.15
anchor_top = 0.13
anchor_right = 0.85
anchor_bottom = 0.26
bbcode_enabled = true
bbcode_text = "[center][color=#000000]..."
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/main/channel_grid/menuitem4"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuitem5" type="TextureButton" parent="menu/main/channel_grid"]
margin_top = 126.0
margin_right = 176.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="RichTextLabel" parent="menu/main/channel_grid/menuitem5"]
anchor_left = 0.15
anchor_top = 0.13
anchor_right = 0.85
anchor_bottom = 0.26
bbcode_enabled = true
bbcode_text = "[center][color=#000000]..."
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/main/channel_grid/menuitem5"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuitem6" type="TextureButton" parent="menu/main/channel_grid"]
margin_left = 180.0
margin_top = 126.0
margin_right = 356.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="RichTextLabel" parent="menu/main/channel_grid/menuitem6"]
anchor_left = 0.15
anchor_top = 0.13
anchor_right = 0.85
anchor_bottom = 0.26
bbcode_enabled = true
bbcode_text = "[center][color=#000000]..."
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/main/channel_grid/menuitem6"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuitem7" type="TextureButton" parent="menu/main/channel_grid"]
margin_left = 360.0
margin_top = 126.0
margin_right = 536.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="RichTextLabel" parent="menu/main/channel_grid/menuitem7"]
anchor_left = 0.15
anchor_top = 0.13
anchor_right = 0.85
anchor_bottom = 0.26
bbcode_enabled = true
bbcode_text = "[center][color=#000000]..."
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/main/channel_grid/menuitem7"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuitem8" type="TextureButton" parent="menu/main/channel_grid"]
margin_left = 540.0
margin_top = 126.0
margin_right = 716.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="RichTextLabel" parent="menu/main/channel_grid/menuitem8"]
anchor_left = 0.15
anchor_top = 0.13
anchor_right = 0.85
anchor_bottom = 0.26
bbcode_enabled = true
bbcode_text = "[center][color=#000000]..."
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/main/channel_grid/menuitem8"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuitem9" type="TextureButton" parent="menu/main/channel_grid"]
margin_top = 252.0
margin_right = 176.0
margin_bottom = 374.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="RichTextLabel" parent="menu/main/channel_grid/menuitem9"]
anchor_left = 0.15
anchor_top = 0.13
anchor_right = 0.85
anchor_bottom = 0.26
bbcode_enabled = true
bbcode_text = "[center][color=#000000]..."
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/main/channel_grid/menuitem9"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuitem10" type="TextureButton" parent="menu/main/channel_grid"]
margin_left = 180.0
margin_top = 252.0
margin_right = 356.0
margin_bottom = 374.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="RichTextLabel" parent="menu/main/channel_grid/menuitem10"]
anchor_left = 0.15
anchor_top = 0.13
anchor_right = 0.85
anchor_bottom = 0.26
bbcode_enabled = true
bbcode_text = "[center][color=#000000]..."
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/main/channel_grid/menuitem10"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuitem11" type="TextureButton" parent="menu/main/channel_grid"]
margin_left = 360.0
margin_top = 252.0
margin_right = 536.0
margin_bottom = 374.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="RichTextLabel" parent="menu/main/channel_grid/menuitem11"]
anchor_left = 0.15
anchor_top = 0.13
anchor_right = 0.85
anchor_bottom = 0.26
bbcode_enabled = true
bbcode_text = "[center][color=#000000]..."
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/main/channel_grid/menuitem11"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="debug" type="TextureButton" parent="menu/main/channel_grid"]
margin_left = 540.0
margin_top = 252.0
margin_right = 716.0
margin_bottom = 374.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="RichTextLabel" parent="menu/main/channel_grid/debug"]
anchor_left = 0.15
anchor_top = 0.13
anchor_right = 0.85
anchor_bottom = 0.26
bbcode_enabled = true
bbcode_text = "[center][color=#000000]DEBUG MENU"
text = "DEBUG MENU"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menu/main/channel_grid/debug"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="menu/main/channel_grid/air_sports" to="." method="_on_air_sports_pressed"]
[connection signal="pressed" from="menu/main/channel_grid/racquet" to="." method="_on_racquet_pressed"]
[connection signal="pressed" from="menu/main/channel_grid/debug" to="." method="_on_debug_pressed"]
